# cetkaik_compact_representation

./: Cargo.toml  README.md
src/: iter.rs  lib.rs  tests.rs
