[package]
name = "cetkaik_compact_representation"
version = "0.3.5"
description = "compact representation of cetkaik"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cetkaik_interface = { path = "../cetkaik_interface" }
cetkaik_fundamental = { path = "../cetkaik_fundamental" }
